Fix mobile bottom bar hidden behind browser toolbar

--- a/chatflow-client/src/components/Sidebar/Sidebar.css
+++ b/chatflow-client/src/components/Sidebar/Sidebar.css
@@ -164,6 +164,7 @@
     flex-direction: column-reverse;
     width: 100%;
     height: 100vh;
+    height: 100dvh;
   }
 
   /* Masaüstü bar gizli, mobil bar görünür */
@@ -184,9 +185,11 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 0;
+    padding-bottom: env(safe-area-inset-bottom, 0px);
     border-right: none;
     border-top: 1px solid #f0f0f0;
     flex-shrink: 0;
+    box-sizing: content-box;
   }
 
   .icon-bar-mobile .icon-btn {
